[package]
name = "interference_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31.1"
tera = "1.20.0"
regex = "1.11.1"
dxr = "0.7.1"
dxr_client = { version = "0.7.1", features = ["reqwest"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.22"
email_address = "0.2.9"